Fixed button spacing

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -48,7 +48,7 @@
 
 .home-buttons {
 	position: relative;
-	padding-right: 350px;
+	padding-right: 330px;
 	padding-top: 15px;
 }
 
